--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
     <h2>اختبار إرسال ليد</h2>
 
     <!-- غيّر رابط الـ Webhook هنا -->
-    <form id="leadForm" action="YOUR_WEBHOOK_URL" method="POST">
+    <form id="leadForm" action="https://services.leadconnectorhq.com/hooks/5qeQ3ikz7A2FnApihfMQ/webhook-trigger/1e5df20a-3b37-40f1-96f3-8043d468a335" method="POST">
 
-      <input type="text" name="full_name" placeholder="الاسم الكامل" required>
-      <input type="tel" name="phone" placeholder="رقم الهاتف" required>
-      <input type="email" name="email" placeholder="البريد الإلكتروني" required>
+      <input type="text" name="Full name" placeholder="الاسم الكامل" required>
+      <input type="tel" name="Phone" placeholder="رقم الهاتف" required>
+      <input type="email" name="Email" placeholder="البريد الإلكتروني" required>
 
       <select name="unit_type" required>
         <option value="">اختر نوع الوحدة</option>
