--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Reelly Prompt Bot</title>
+  <title>Reelly Prompt Bot (Debug + Fallback)</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
     :root{
       --bg:#f5f5f7;--panel:#fff;--stroke:#e5e7eb;--muted:#6b7280;
       --text:#111827;--a:#2563eb;--a2:#0ea5e9;
-      --bot:#eef2ff;--user:#ecfeff;
+      --bot:#eef2ff;--user:#ecfeff;--warn:#fff7ed;
     }
     *{box-sizing:border-box}
     body{
@@ -61,7 +61,7 @@
     .row.bot{justify-content:flex-start}
     .row.user{justify-content:flex-end}
     .bubble{
-      max-width:min(78%,720px);
+      max-width:min(78%,760px);
       border:1px solid var(--stroke);
       border-radius:16px;padding:10px 12px;
       font-size:14px;line-height:1.6;
@@ -70,6 +70,8 @@
     }
     .row.bot .bubble{background:var(--bot);border-top-right-radius:6px}
     .row.user .bubble{background:var(--user);border-top-left-radius:6px}
+    .bubble.debug{background:#0b1220;color:#e5e7eb;border-color:#111827;font-size:12px}
+    .bubble.warn{background:var(--warn)}
     .composer{
       padding:12px;border-top:1px solid var(--stroke);
       display:flex;gap:10px;background:#fff;
@@ -112,19 +114,19 @@
       <div class="pill">RB</div>
       <div>
         <div>Reelly Prompt Bot</div>
-        <div class="sub">اكتب طلبك بحرية ← نتائج مباشرة</div>
+        <div class="sub">Debug + Smart Fallback</div>
       </div>
     </div>
-    <div style="display:flex;gap:8px">
+    <div style="display:flex;gap:8px;align-items:center;">
       <button class="btn" id="reset">إعادة</button>
-      <button class="btn primary" id="example">مثال</button>
+      <button class="btn primary" id="exampleform">مثال</button>
     </div>
   </div>
 
   <div class="chat" id="chat"></div>
 
   <div class="composer">
-    <input id="input" placeholder="مثال: بدي 2 غرف بدبي مارينا بين 1 و 2 مليون بوست هاند أوفر">
+    <input id="input" placeholder="اكتب طلبك: سعر، غرف، منطقة...">
     <button class="send" id="send">إرسال</button>
   </div>
 </div>
@@ -139,17 +141,19 @@ const API_KEY_HEADER = "X-API-Key";
 const chat = document.getElementById("chat");
 const input = document.getElementById("input");
 
-function addBubble(text, who){
+function addBubble(text, who, cls=""){
   const r=document.createElement("div");
   r.className="row "+who;
   const b=document.createElement("div");
-  b.className="bubble";
+  b.className="bubble"+(cls?(" "+cls):"");
   b.textContent=text;
   r.appendChild(b); chat.appendChild(r);
   chat.scrollTop=chat.scrollHeight;
 }
 const bot = t => addBubble(t,"bot");
 const user = t => addBubble(t,"user");
+const debug = t => addBubble(t,"bot","debug");
+const warn = t => addBubble(t,"bot","warn");
 
 function tryParseJSON(s){ try{return JSON.parse(s)}catch{return null} }
 function isImg(u){ return typeof u==="string" && /^https?:\/\//.test(u); }
@@ -171,7 +175,7 @@ function getCoords(it){
 function tag(t){const s=document.createElement("span");s.className="tag";s.textContent=t;return s;}
 
 function addCards(items){
-  bot("أفضل النتائج حسب طلبك 👇");
+  bot("أفضل النتائج 👇");
   items.slice(0,5).forEach((it,i)=>{
     const row=document.createElement("div");row.className="row bot";
     const b=document.createElement("div");b.className="bubble";
@@ -187,7 +191,7 @@ function addCards(items){
     cb.appendChild(m);
     const co=getCoords(it);
     const a=document.createElement("a");a.className="link";
-    if(co){a.href=`https://maps.google.com/?q=${co.lat},${co.lng}`;a.target="_blank";a.textContent="فتح على الخريطة";}
+    if(co){a.href=`https://maps.google.com/?q=${co.lat},${co.lng}`;a.target="_blank";a.rel="noopener";a.textContent="فتح على Google Maps";}
     else{a.textContent="لا توجد إحداثيات";a.style.pointerEvents="none";a.style.opacity=".6";}
     cb.appendChild(a);
     c.appendChild(cb);b.appendChild(c);row.appendChild(b);chat.appendChild(row);
@@ -195,33 +199,74 @@ function addCards(items){
   chat.scrollTop=chat.scrollHeight;
 }
 
-/* ================= PROMPT PARSING ================= */
+/* ================= PROMPT PARSING =================
+   بسيطة (Rule-based). إذا بدك توسعتها منعملها.
+*/
 function parsePrompt(text){
   const t=text.toLowerCase();
-  const f={country:"UAE",region:"",search_query:"",unit_bedrooms:"",unit_price_from:"",unit_price_to:"",post_handover:""};
+  const f={
+    country:"UAE",
+    region:"",
+    search_query:"",
+    unit_bedrooms:"",
+    unit_price_from:"",
+    unit_price_to:"",
+    post_handover:""
+  };
 
-  if(/dubai|دبي/.test(t)) f.region="Dubai";
+  // Region
   if(/abu dhabi|أبوظبي/.test(t)) f.region="Abu Dhabi";
-  if(/sharjah|الشارقة/.test(t)) f.region="Sharjah";
+  else if(/sharjah|الشارقة/.test(t)) f.region="Sharjah";
+  else if(/dubai|دبي/.test(t)) f.region="Dubai";
+  else if(/uae|الإمارات/.test(t)) f.region="";
 
+  // Search query
   if(/marina|مارينا/.test(t)) f.search_query="Marina";
   else if(/downtown|داونتاون/.test(t)) f.search_query="Downtown";
-  else f.search_query=f.region||"UAE";
+  else if(/jvc|قرية جميرا|jumeirah village circle/.test(t)) f.search_query="JVC";
+  else if(/business bay|بزنس باي/.test(t)) f.search_query="Business Bay";
+  else if(/palm jumeirah|نخلة جميرا|palm/.test(t)) f.search_query="Palm Jumeirah";
+  else f.search_query = f.region || "UAE";
 
+  // Bedrooms
   if(/studio|استوديو/.test(t)) f.unit_bedrooms="studio";
-  const b=t.match(/(\d+)\s*(?:غرف|bed)/); if(b) f.unit_bedrooms=b[1];
+  const b=t.match(/(\d+)\s*(?:غرف|غرفة|bed|beds|br)/);
+  if(b) f.unit_bedrooms=b[1];
+  if(/3\+|3\s*\+/.test(t)) f.unit_bedrooms="3";
 
-  const p=t.match(/بين\s*(\d+)\s*و\s*(\d+)/);
-  if(p){f.unit_price_from=p[1]*1_000_000;f.unit_price_to=p[2]*1_000_000;}
+  // Price: "بين 1 و 2 مليون"
+  const p1=t.match(/بين\s*(\d+(?:\.\d+)?)\s*و\s*(\d+(?:\.\d+)?)(?:\s*مليون)?/);
+  if(p1){
+    f.unit_price_from = String(Math.round(Number(p1[1])*1_000_000));
+    f.unit_price_to   = String(Math.round(Number(p1[2])*1_000_000));
+  }
 
-  if(/post|بوست|بعد التسليم/.test(t)) f.post_handover="true";
+  // Also handle "1-2m" / "1-2"
+  const p2=t.match(/(\d+(?:\.\d+)?)\s*[-–]\s*(\d+(?:\.\d+)?)(?:\s*m| مليون)?/);
+  if(!f.unit_price_from && p2){
+    const a=Number(p2[1]), b2=Number(p2[2]);
+    if(Number.isFinite(a) && Number.isFinite(b2)){
+      f.unit_price_from = String(a < 50 ? Math.round(a*1_000_000) : Math.round(a));
+      f.unit_price_to   = String(b2 < 50 ? Math.round(b2*1_000_000) : Math.round(b2));
+    }
+  }
+
+  // Post handover
+  if(/post handover|بوست|بعد التسليم/.test(t)) f.post_handover="true";
+  if(/بدون بوست|خلال الإنشاء|عادي/.test(t)) f.post_handover="false";
+
   return f;
 }
 
-/* ================= SMART FETCH ================= */
+/* ================= SMART FETCH (نفس الترتيب) ================= */
 function buildParams(o){
   const p=new URLSearchParams();
-  Object.entries(o).forEach(([k,v])=>{if(v!=="")p.append(k,v)});
+  Object.entries(o).forEach(([k,v])=>{
+    if(v === undefined || v === null) return;
+    const s=String(v).trim();
+    if(s==="") return;
+    p.append(k,s);
+  });
   return p.toString();
 }
 
@@ -230,56 +275,167 @@ async function smartFetchReelly(payload){
 
   // 1) GET + HEADER
   let url=`${API_BASE}?${qs}`;
-  let r=await fetch(url,{headers:{[API_KEY_HEADER]:API_KEY}});
+  let r=await fetch(url,{
+    method:"GET",
+    headers:{
+      [API_KEY_HEADER]:API_KEY,
+      "accept":"application/json"
+    }
+  });
   if(r.ok) return {r,mode:"GET+HEADER",url};
 
   // 2) POST + HEADER
-  r=await fetch(API_BASE,{
+  url=API_BASE;
+  r=await fetch(url,{
     method:"POST",
-    headers:{[API_KEY_HEADER]:API_KEY,"Content-Type":"application/json"},
+    headers:{
+      [API_KEY_HEADER]:API_KEY,
+      "Content-Type":"application/json",
+      "accept":"application/json"
+    },
     body:JSON.stringify(payload)
   });
-  if(r.ok) return {r,mode:"POST+HEADER",url:API_BASE};
+  if(r.ok) return {r,mode:"POST+HEADER",url};
 
   // 3) GET + QUERY KEY
-  url=`${API_BASE}?${qs}&api_key=${API_KEY}`;
-  r=await fetch(url);
-  return {r,mode:"GET+QUERY",url};
+  url=`${API_BASE}?${qs}&api_key=${encodeURIComponent(API_KEY)}`;
+  r=await fetch(url,{method:"GET"});
+  return {r,mode:"GET+QUERYKEY",url};
 }
 
 async function search(filters){
   const payload={...filters,per_page:5,page:1};
   const {r,mode,url}=await smartFetchReelly(payload);
-  const txt=await r.text(); let d={}; try{d=JSON.parse(txt)}catch{}
-  if(!r.ok) return {ok:false,status:r.status,mode,url};
+
+  const txt=await r.text();
+  let d={}; try{ d=JSON.parse(txt) }catch{}
+
+  if(!r.ok){
+    return {ok:false,status:r.status,mode,url,raw:d};
+  }
   const items=d.items||d.data||d.results||[];
-  return {ok:true,items,mode};
+  return {ok:true,items,mode,url};
+}
+
+/* ================= SMART FALLBACK =================
+   إذا ما في نتائج، نوسّع البحث على مراحل.
+*/
+function clone(obj){ return JSON.parse(JSON.stringify(obj)); }
+
+async function searchWithFallback(originalFilters){
+  const attempts = [];
+
+  // A0: نفس الفلاتر
+  attempts.push({ label:"A0: نفس الفلاتر", filters: clone(originalFilters) });
+
+  // A1: إزالة post_handover
+  const a1 = clone(originalFilters);
+  a1.post_handover = "";
+  attempts.push({ label:"A1: بدون Post Handover", filters: a1 });
+
+  // A2: إزالة search_query (بس region + price + beds)
+  const a2 = clone(a1);
+  a2.search_query = a2.region || "UAE";
+  attempts.push({ label:"A2: توسيع المنطقة", filters: a2 });
+
+  // A3: إزالة bedrooms
+  const a3 = clone(a2);
+  a3.unit_bedrooms = "";
+  attempts.push({ label:"A3: بدون فلتر الغرف", filters: a3 });
+
+  // A4: إزالة price (أوسع)
+  const a4 = clone(a3);
+  a4.unit_price_from = "";
+  a4.unit_price_to = "";
+  attempts.push({ label:"A4: بدون السعر", filters: a4 });
+
+  for (let i=0; i<attempts.length; i++){
+    const att = attempts[i];
+    bot(`🔎 محاولة ${i+1}/${attempts.length}… (${att.label})`);
+    const res = await search(att.filters);
+
+    // Debug message لكل محاولة
+    if(!res.ok){
+      debug(
+        `DEBUG\nlabel: ${att.label}\nmode: ${res.mode}\nstatus: ${res.status}\nurl: ${res.url}`
+      );
+      // إذا 401 لا معنى نكمل بمحاولات ثانية غالبًا
+      if(res.status === 401 || res.status === 403){
+        return {ok:false, fatal:true, reason:"AUTH", last:res};
+      }
+      continue;
+    }
+
+    debug(
+      `DEBUG\nlabel: ${att.label}\nmode: ${res.mode}\nstatus: 200\ncount: ${res.items.length}\nurl: ${res.url}`
+    );
+
+    if(res.items.length){
+      return {ok:true, usedLabel: att.label, items: res.items, mode: res.mode, url: res.url};
+    }
+  }
+
+  return {ok:false, fatal:false, reason:"NO_RESULTS"};
 }
 
 /* ================= BOT ================= */
 function reset(){
   chat.innerHTML="";
-  bot("أهلًا 👋 اكتب طلبك بحرية (سعر، غرف، منطقة) وأنا أجيب النتائج.");
+  bot("أهلًا 👋\nاكتب طلبك بحرية (سعر، غرف، منطقة) وأنا أجيب النتائج من Reelly.");
+  warn("ملاحظة: إذا ما ظهرت نتائج، رح أوسّع البحث تلقائيًا (Fallback) وأعرض أقرب نتائج.");
 }
 reset();
 
 async function handle(){
-  const q=input.value.trim(); if(!q) return;
-  input.value=""; user(q);
-  const filters=parsePrompt(q);
-  bot("فهمت طلبك، عم أبحث هلّق...");
-  const res=await search(filters);
-  if(!res.ok){
-    bot(`❌ فشل الطلب\nStatus: ${res.status}\nMode: ${res.mode}`);
+  const q=input.value.trim();
+  if(!q) return;
+  input.value="";
+  user(q);
+
+  if(q === "إعادة" || q.toLowerCase() === "reset"){
+    reset();
     return;
   }
-  addCards(res.items);
+
+  const filters=parsePrompt(q);
+
+  bot(
+`تمام ✅ فهمت طلبك هيك:
+- Region: ${filters.region || "Any"}
+- Query: ${filters.search_query || "Any"}
+- Bedrooms: ${filters.unit_bedrooms || "Any"}
+- Price: ${filters.unit_price_from || "—"} → ${filters.unit_price_to || "—"}
+- Post Handover: ${filters.post_handover || "Any"}
+
+عم بجيب النتائج...`
+  );
+
+  const out = await searchWithFallback(filters);
+
+  if(out.ok){
+    if(out.usedLabel !== "A0: نفس الفلاتر"){
+      warn(`ما لقيت نتائج مطابقة 100%، فوسّعت البحث (${out.usedLabel}) وهاي أقرب النتائج 👇`);
+    }
+    addCards(out.items);
+    return;
+  }
+
+  if(out.fatal && out.reason === "AUTH"){
+    bot(`❌ فشل المصادقة على الـ API (Unauthorized)\nStatus: ${out.last.status}\nMode: ${out.last.mode}\n\nغالبًا الـ API Key مرفوض من المتصفح أو غير صالح.`);
+    debug(`DEBUG\nlast_url: ${out.last.url}`);
+    return;
+  }
+
+  bot("😕 ما لقيت ولا نتيجة حتى بعد توسيع البحث.\nجرّب تغيّر المنطقة أو توسّع السعر أو احذف بوست هاند أوفر.");
 }
 
 document.getElementById("send").onclick=handle;
-input.addEventListener("keydown",e=>{if(e.key==="Enter"){e.preventDefault();handle()}});
+input.addEventListener("keydown",e=>{ if(e.key==="Enter"){ e.preventDefault(); handle(); }});
 document.getElementById("reset").onclick=reset;
-document.getElementById("example").onclick=()=>{input.value="بدي 2 غرف بدبي مارينا بين 1 و 2 مليون بوست هاند أوفر";}
+document.getElementById("exampleform").onclick=()=>{
+  input.value="بدي 2 غرف بدبي مارينا بين 1 و 2 مليون بوست هاند أوفر";
+  input.focus();
+};
 </script>
 </body>
 </html>
